--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+  animated_text_kit: ^2.1.0
   
 dev_dependencies:
   flutter_driver:
