--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   animated_text_kit: ^2.1.0
+  flutter_bloc: ^4.0.0
   
 dev_dependencies:
   flutter_driver:
