--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   animated_text_kit: ^2.1.0
   flutter_bloc: ^4.0.0
-  
+  dio: ^3.0.9
+
 dev_dependencies:
   flutter_driver:
     sdk: flutter
