setup stock news page

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,8 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+# Authorization related
+lib/authorization
+
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
