--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   animated_text_kit: ^2.1.0
   flutter_bloc: ^4.0.0
   dio: ^3.0.9
+  equatable: ^1.2.0
 
 dev_dependencies:
   flutter_driver:
@@ -28,6 +29,7 @@ flutter:
   uses-material-design: true
   assets:
     - images/
+    - secrets.json
   fonts:
     - family: OpenSans
       fonts:
