add api key loader

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ app.*.symbols
 app.*.map.json
 
 # Authorization related
-lib/authorization
+secrets.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
