--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^4.0.0
   dio: ^3.0.9
   equatable: ^1.2.0
+  url_launcher: ^5.4.10
 
 dev_dependencies:
   flutter_driver:
