--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   dio: ^3.0.9
   equatable: ^1.2.0
   url_launcher: ^5.4.10
-
+  freezed: ^0.10.9
+  
 dev_dependencies:
   flutter_driver:
     sdk: flutter
